# APEX

./: .gitignore  CLAUDE.md  Mejoras_lane.md  Notas.md  control.md  lanzar_camara.md  seguimiento_carril.md
docs/: lanzamiento-lane-detection.md
yahboomcar_ros2_ws/yahboomcar_ws/src/lane_detection/: CMakeLists.txt  package.xml
yahboomcar_ros2_ws/yahboomcar_ws/src/lane_detection/launch/: lane_detection_launch.py
yahboomcar_ros2_ws/yahboomcar_ws/src/lane_detection/scripts/: web_video_server.py
yahboomcar_ros2_ws/yahboomcar_ws/src/lane_detection/src/: image_subscriber.cpp
yahboomcar_ros2_ws/yahboomcar_ws/src/navigation_control/: CMakeLists.txt  package.xml
yahboomcar_ros2_ws/yahboomcar_ws/src/navigation_control/launch/: navigation_without_obstacles_launch.py
yahboomcar_ros2_ws/yahboomcar_ws/src/navigation_control/scripts/: control_tuning_server.py
yahboomcar_ros2_ws/yahboomcar_ws/src/navigation_control/src/: Master.cpp
yahboomcar_ros2_ws/yahboomcar_ws/src/object_detection/: CMakeLists.txt  README.md
yahboomcar_ros2_ws/yahboomcar_ws/src/object_detection/src/: object_detection.cpp  object_detection_pcl.cpp
