<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation_control</name>
  <version>1.0.0</version>
  <description>APEX navigation control — lane-following with PD controller adapted from AVIM Master.cpp for Yahboom ROSMASTER-A1</description>
  <maintainer email="jose@apex.dev">Jose</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
